@@ -1,3 +1,7 @@
+2005-08-24 Jay Rossiter <cryptographite@users.sf.net> 1.5.1-RC3-cvs-b13
+
+	* Fix: Prevent file exposure bug in stats module (thanks to ilia)
+
 2005-08-23 Jay Rossiter <cryptographite@users.sf.net> 1.5.1-RC3-cvs-b12
 
 	* Fix: Prevent HTML tags inside EXIF info from being displayed without
